--- a/ToDo_App/CSS/todo.css
+++ b/ToDo_App/CSS/todo.css
@@ -26,3 +26,16 @@ li {
     list-style: none;
     margin: 0;
 }
+
+
+#todos {
+    text-align: center;
+}
+
+
+footer {
+    border: dotted rgb(118, 124, 230) 1px;
+    position: absolute;
+    width: 100%;
+    bottom: 0px;
+}
